--- a/FCI/ui/fci_55_godown_details.ui
+++ b/FCI/ui/fci_55_godown_details.ui
@@ -107,9 +107,9 @@ background-color: rgb(58, 150, 4);</string>
     <widget class="QGroupBox" name="groupBox_7">
      <property name="geometry">
       <rect>
-       <x>10</x>
+       <x>20</x>
        <y>600</y>
-       <width>711</width>
+       <width>721</width>
        <height>91</height>
       </rect>
      </property>
@@ -396,15 +396,15 @@ background-color: rgb(0, 85, 0);</string>
        <string>ID: </string>
       </property>
       <property name="alignment">
-       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
       </property>
      </widget>
      <widget class="QLabel" name="label_8">
       <property name="geometry">
        <rect>
-        <x>20</x>
+        <x>30</x>
         <y>120</y>
-        <width>71</width>
+        <width>61</width>
         <height>31</height>
        </rect>
       </property>
@@ -423,7 +423,7 @@ background-color: rgb(0, 85, 0);</string>
        <string>NAME : </string>
       </property>
       <property name="alignment">
-       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
       </property>
      </widget>
      <widget class="QLabel" name="label_10">
@@ -450,7 +450,7 @@ background-color: rgb(0, 85, 0);</string>
        <string>CAPACITY :</string>
       </property>
       <property name="alignment">
-       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
       </property>
      </widget>
      <widget class="QLabel" name="label_12">
@@ -477,7 +477,7 @@ background-color: rgb(0, 85, 0);</string>
        <string>ROWS :</string>
       </property>
       <property name="alignment">
-       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
       </property>
      </widget>
      <widget class="QLabel" name="label_11">
@@ -504,7 +504,7 @@ background-color: rgb(0, 85, 0);</string>
        <string>STACKS:</string>
       </property>
       <property name="alignment">
-       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
       </property>
      </widget>
      <widget class="QLabel" name="label_13">
@@ -531,7 +531,7 @@ background-color: rgb(0, 85, 0);</string>
        <string>COLUMNS : </string>
       </property>
       <property name="alignment">
-       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
       </property>
      </widget>
      <widget class="QLineEdit" name="lineEdit_2">
@@ -565,31 +565,6 @@ color: rgb(0, 0, 0);</string>
         <x>150</x>
         <y>170</y>
         <width>211</width>
-        <height>31</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <family>Arial</family>
-        <pointsize>12</pointsize>
-        <weight>75</weight>
-        <bold>true</bold>
-       </font>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">background-color: rgb(255, 255, 255);
-color: rgb(0, 0, 0);</string>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-     </widget>
-     <widget class="QLineEdit" name="lineEdit_4">
-      <property name="geometry">
-       <rect>
-        <x>150</x>
-        <y>220</y>
-        <width>111</width>
         <height>31</height>
        </rect>
       </property>
@@ -714,6 +689,33 @@ background-color: rgb(170, 0, 0);</string>
        <set>Qt::AlignCenter</set>
       </property>
      </widget>
+     <widget class="QLabel" name="label_16">
+      <property name="geometry">
+       <rect>
+        <x>150</x>
+        <y>230</y>
+        <width>81</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Arial</family>
+        <pointsize>12</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(221, 253, 255);</string>
+      </property>
+      <property name="text">
+       <string>0</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+      </property>
+     </widget>
     </widget>
     <widget class="QPushButton" name="pushButton_14">
      <property name="geometry">
@@ -743,9 +745,9 @@ background-color: rgb(58, 150, 4);</string>
     <widget class="QTableWidget" name="tableWidget">
      <property name="geometry">
       <rect>
-       <x>10</x>
+       <x>20</x>
        <y>220</y>
-       <width>711</width>
+       <width>721</width>
        <height>361</height>
       </rect>
      </property>
