--- a/TYR_2.0_18.5/ui/TY_10_SPECIAL_REPORT.ui
+++ b/TYR_2.0_18.5/ui/TY_10_SPECIAL_REPORT.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1404</width>
+    <width>1368</width>
     <height>768</height>
    </rect>
   </property>
@@ -20,7 +20,7 @@
    <string>MainWindow</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: rgb(47, 141, 255);</string>
+   <string notr="true"/>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QFrame" name="frame">
@@ -29,7 +29,7 @@
       <x>10</x>
       <y>20</y>
       <width>1331</width>
-      <height>681</height>
+      <height>691</height>
      </rect>
     </property>
     <property name="font">
@@ -38,7 +38,7 @@
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">color: rgb(255, 255, 255);
+     <string notr="true">color: rgb(0, 0, 0);
 </string>
     </property>
     <property name="frameShape">
@@ -68,7 +68,7 @@
       </font>
      </property>
      <property name="styleSheet">
-      <string notr="true">color: rgb(255, 255, 255);</string>
+      <string notr="true">color: rgb(0, 0, 0);</string>
      </property>
      <property name="text">
       <string>05 Aug 2020 12:45:00</string>
@@ -80,9 +80,9 @@
     <widget class="QPushButton" name="pushButton_3">
      <property name="geometry">
       <rect>
-       <x>940</x>
+       <x>990</x>
        <y>80</y>
-       <width>101</width>
+       <width>81</width>
        <height>31</height>
       </rect>
      </property>
@@ -105,9 +105,9 @@ background-color: rgb(170, 0, 0);</string>
     <widget class="QPushButton" name="pushButton_4">
      <property name="geometry">
       <rect>
-       <x>940</x>
-       <y>20</y>
-       <width>101</width>
+       <x>880</x>
+       <y>80</y>
+       <width>81</width>
        <height>31</height>
       </rect>
      </property>
@@ -130,7 +130,7 @@ background-color: rgb(0, 180, 0);</string>
     <widget class="QLineEdit" name="lineEdit">
      <property name="geometry">
       <rect>
-       <x>100</x>
+       <x>80</x>
        <y>20</y>
        <width>101</width>
        <height>31</height>
@@ -155,7 +155,7 @@ color: rgb(0, 0, 0);</string>
     <widget class="QLabel" name="label_3">
      <property name="geometry">
       <rect>
-       <x>30</x>
+       <x>10</x>
        <y>20</y>
        <width>61</width>
        <height>31</height>
@@ -170,7 +170,7 @@ color: rgb(0, 0, 0);</string>
       </font>
      </property>
      <property name="styleSheet">
-      <string notr="true">color: rgb(255, 255, 255);</string>
+      <string notr="true">color: rgb(0, 0, 0);</string>
      </property>
      <property name="text">
       <string>FROM:</string>
@@ -182,9 +182,9 @@ color: rgb(0, 0, 0);</string>
     <widget class="QPushButton" name="pushButton_8">
      <property name="geometry">
       <rect>
-       <x>220</x>
+       <x>200</x>
        <y>20</y>
-       <width>81</width>
+       <width>71</width>
        <height>31</height>
       </rect>
      </property>
@@ -207,7 +207,7 @@ color: rgb(255, 255, 255);</string>
     <widget class="QLabel" name="label_4">
      <property name="geometry">
       <rect>
-       <x>30</x>
+       <x>10</x>
        <y>80</y>
        <width>41</width>
        <height>31</height>
@@ -222,7 +222,7 @@ color: rgb(255, 255, 255);</string>
       </font>
      </property>
      <property name="styleSheet">
-      <string notr="true">color: rgb(255, 255, 255);</string>
+      <string notr="true">color: rgb(0, 0, 0);</string>
      </property>
      <property name="text">
       <string>TO:</string>
@@ -234,7 +234,7 @@ color: rgb(255, 255, 255);</string>
     <widget class="QLineEdit" name="lineEdit_2">
      <property name="geometry">
       <rect>
-       <x>100</x>
+       <x>80</x>
        <y>80</y>
        <width>101</width>
        <height>31</height>
@@ -259,9 +259,9 @@ color: rgb(0, 0, 0);</string>
     <widget class="QPushButton" name="pushButton_12">
      <property name="geometry">
       <rect>
-       <x>220</x>
+       <x>200</x>
        <y>80</y>
-       <width>81</width>
+       <width>71</width>
        <height>31</height>
       </rect>
      </property>
@@ -284,7 +284,7 @@ color: rgb(255, 255, 255);</string>
     <widget class="QLabel" name="label_5">
      <property name="geometry">
       <rect>
-       <x>330</x>
+       <x>300</x>
        <y>20</y>
        <width>41</width>
        <height>31</height>
@@ -299,7 +299,7 @@ color: rgb(255, 255, 255);</string>
       </font>
      </property>
      <property name="styleSheet">
-      <string notr="true">color: rgb(255, 255, 255);</string>
+      <string notr="true">color: rgb(0, 0, 0);</string>
      </property>
      <property name="text">
       <string>HH:</string>
@@ -311,7 +311,7 @@ color: rgb(255, 255, 255);</string>
     <widget class="QComboBox" name="comboBox">
      <property name="geometry">
       <rect>
-       <x>380</x>
+       <x>350</x>
        <y>20</y>
        <width>61</width>
        <height>31</height>
@@ -363,7 +363,7 @@ color: rgb(0, 0, 0);</string>
     <widget class="QLabel" name="label_6">
      <property name="geometry">
       <rect>
-       <x>460</x>
+       <x>440</x>
        <y>20</y>
        <width>31</width>
        <height>31</height>
@@ -378,7 +378,7 @@ color: rgb(0, 0, 0);</string>
       </font>
      </property>
      <property name="styleSheet">
-      <string notr="true">color: rgb(255, 255, 255);</string>
+      <string notr="true">color: rgb(0, 0, 0);</string>
      </property>
      <property name="text">
       <string>MI:</string>
@@ -390,7 +390,7 @@ color: rgb(0, 0, 0);</string>
     <widget class="QComboBox" name="comboBox_2">
      <property name="geometry">
       <rect>
-       <x>500</x>
+       <x>490</x>
        <y>20</y>
        <width>51</width>
        <height>31</height>
@@ -442,7 +442,7 @@ color: rgb(0, 0, 0);</string>
     <widget class="QComboBox" name="comboBox_7">
      <property name="geometry">
       <rect>
-       <x>500</x>
+       <x>490</x>
        <y>80</y>
        <width>51</width>
        <height>31</height>
@@ -494,7 +494,7 @@ color: rgb(0, 0, 0);</string>
     <widget class="QLabel" name="label_11">
      <property name="geometry">
       <rect>
-       <x>330</x>
+       <x>300</x>
        <y>80</y>
        <width>41</width>
        <height>31</height>
@@ -509,7 +509,7 @@ color: rgb(0, 0, 0);</string>
       </font>
      </property>
      <property name="styleSheet">
-      <string notr="true">color: rgb(255, 255, 255);</string>
+      <string notr="true">color: rgb(0, 0, 0);</string>
      </property>
      <property name="text">
       <string>HH:</string>
@@ -521,7 +521,7 @@ color: rgb(0, 0, 0);</string>
     <widget class="QLabel" name="label_12">
      <property name="geometry">
       <rect>
-       <x>460</x>
+       <x>440</x>
        <y>80</y>
        <width>41</width>
        <height>31</height>
@@ -536,7 +536,7 @@ color: rgb(0, 0, 0);</string>
       </font>
      </property>
      <property name="styleSheet">
-      <string notr="true">color: rgb(255, 255, 255);</string>
+      <string notr="true">color: rgb(0, 0, 0);</string>
      </property>
      <property name="text">
       <string>MI:</string>
@@ -548,7 +548,7 @@ color: rgb(0, 0, 0);</string>
     <widget class="QComboBox" name="comboBox_8">
      <property name="geometry">
       <rect>
-       <x>380</x>
+       <x>350</x>
        <y>80</y>
        <width>61</width>
        <height>31</height>
@@ -600,9 +600,9 @@ color: rgb(0, 0, 0);</string>
     <widget class="QPushButton" name="pushButton_13">
      <property name="geometry">
       <rect>
-       <x>1070</x>
+       <x>1100</x>
        <y>80</y>
-       <width>91</width>
+       <width>81</width>
        <height>31</height>
       </rect>
      </property>
@@ -625,8 +625,8 @@ color: rgb(255, 255, 255);</string>
     <widget class="QCalendarWidget" name="calendarWidget">
      <property name="geometry">
       <rect>
-       <x>210</x>
-       <y>320</y>
+       <x>110</x>
+       <y>250</y>
        <width>341</width>
        <height>231</height>
       </rect>
@@ -642,8 +642,8 @@ color: rgb(0, 0, 0);</string>
     <widget class="QCalendarWidget" name="calendarWidget_2">
      <property name="geometry">
       <rect>
-       <x>610</x>
-       <y>320</y>
+       <x>490</x>
+       <y>250</y>
        <width>341</width>
        <height>231</height>
       </rect>
@@ -659,9 +659,9 @@ color: rgb(0, 0, 0);</string>
     <widget class="Line" name="line">
      <property name="geometry">
       <rect>
-       <x>10</x>
+       <x>0</x>
        <y>130</y>
-       <width>1311</width>
+       <width>1331</width>
        <height>20</height>
       </rect>
      </property>
@@ -678,10 +678,10 @@ color: rgb(0, 0, 0);</string>
     <widget class="QTableWidget" name="tableWidget">
      <property name="geometry">
       <rect>
-       <x>20</x>
+       <x>10</x>
        <y>160</y>
-       <width>1281</width>
-       <height>521</height>
+       <width>1301</width>
+       <height>511</height>
       </rect>
      </property>
      <property name="font">
@@ -836,9 +836,9 @@ color: rgb(0, 0, 0);</string>
     <widget class="QLabel" name="label_7">
      <property name="geometry">
       <rect>
-       <x>600</x>
+       <x>560</x>
        <y>20</y>
-       <width>101</width>
+       <width>71</width>
        <height>31</height>
       </rect>
      </property>
@@ -851,10 +851,10 @@ color: rgb(0, 0, 0);</string>
       </font>
      </property>
      <property name="styleSheet">
-      <string notr="true">color: rgb(255, 255, 255);</string>
+      <string notr="true">color: rgb(0, 0, 0);</string>
      </property>
      <property name="text">
-      <string>SPECIMEN:</string>
+      <string>PARTY :</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
@@ -863,7 +863,7 @@ color: rgb(0, 0, 0);</string>
     <widget class="QComboBox" name="comboBox_3">
      <property name="geometry">
       <rect>
-       <x>730</x>
+       <x>630</x>
        <y>20</y>
        <width>181</width>
        <height>31</height>
@@ -883,7 +883,7 @@ color: rgb(0, 0, 0);</string>
      </property>
      <item>
       <property name="text">
-       <string>01</string>
+       <string>MRF</string>
       </property>
      </item>
      <item>
@@ -915,8 +915,8 @@ color: rgb(0, 0, 0);</string>
     <widget class="QLabel" name="label_8">
      <property name="geometry">
       <rect>
-       <x>600</x>
-       <y>80</y>
+       <x>820</x>
+       <y>20</y>
        <width>101</width>
        <height>31</height>
       </rect>
@@ -930,10 +930,10 @@ color: rgb(0, 0, 0);</string>
       </font>
      </property>
      <property name="styleSheet">
-      <string notr="true">color: rgb(255, 255, 255);</string>
+      <string notr="true">color: rgb(0, 0, 0);</string>
      </property>
      <property name="text">
-      <string>TEST TYPE:</string>
+      <string>SPECIMEN :</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
@@ -942,9 +942,9 @@ color: rgb(0, 0, 0);</string>
     <widget class="QComboBox" name="comboBox_4">
      <property name="geometry">
       <rect>
-       <x>730</x>
-       <y>80</y>
-       <width>181</width>
+       <x>930</x>
+       <y>20</y>
+       <width>191</width>
        <height>31</height>
       </rect>
      </property>
@@ -962,7 +962,7 @@ color: rgb(0, 0, 0);</string>
      </property>
      <item>
       <property name="text">
-       <string>TENSILE</string>
+       <string>01-RUBBER</string>
       </property>
      </item>
      <item>
@@ -994,9 +994,9 @@ color: rgb(0, 0, 0);</string>
     <widget class="QPushButton" name="pushButton_14">
      <property name="geometry">
       <rect>
-       <x>1190</x>
+       <x>1210</x>
        <y>80</y>
-       <width>91</width>
+       <width>81</width>
        <height>31</height>
       </rect>
      </property>
@@ -1019,8 +1019,8 @@ color: rgb(255, 255, 255);</string>
     <widget class="QCheckBox" name="checkBox">
      <property name="geometry">
       <rect>
-       <x>1070</x>
-       <y>20</y>
+       <x>780</x>
+       <y>80</y>
        <width>61</width>
        <height>31</height>
       </rect>
@@ -1039,6 +1039,65 @@ color: rgb(255, 255, 255);</string>
      <property name="checked">
       <bool>true</bool>
      </property>
+    </widget>
+    <widget class="QLabel" name="label_9">
+     <property name="geometry">
+      <rect>
+       <x>560</x>
+       <y>80</y>
+       <width>61</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Arial</family>
+       <pointsize>12</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(0, 0, 0);</string>
+     </property>
+     <property name="text">
+      <string>UNIT    :</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+     </property>
+    </widget>
+    <widget class="QComboBox" name="comboBox_5">
+     <property name="geometry">
+      <rect>
+       <x>630</x>
+       <y>80</y>
+       <width>131</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Arial</family>
+       <pointsize>12</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(170, 255, 255);
+color: rgb(0, 0, 0);</string>
+     </property>
+     <item>
+      <property name="text">
+       <string>Kg/Cm</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>MPA</string>
+      </property>
+     </item>
     </widget>
     <zorder>label_20</zorder>
     <zorder>pushButton_3</zorder>
@@ -1068,6 +1127,8 @@ color: rgb(255, 255, 255);</string>
     <zorder>comboBox_4</zorder>
     <zorder>pushButton_14</zorder>
     <zorder>checkBox</zorder>
+    <zorder>label_9</zorder>
+    <zorder>comboBox_5</zorder>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -1075,7 +1136,7 @@ color: rgb(255, 255, 255);</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1404</width>
+     <width>1368</width>
      <height>21</height>
     </rect>
    </property>
