--- a/TYR_2.0_18.5/ui/TY_10_SPECIAL_REPORT.ui
+++ b/TYR_2.0_18.5/ui/TY_10_SPECIAL_REPORT.ui
@@ -642,7 +642,7 @@ color: rgb(0, 0, 0);</string>
     <widget class="QCalendarWidget" name="calendarWidget_2">
      <property name="geometry">
       <rect>
-       <x>490</x>
+       <x>480</x>
        <y>250</y>
        <width>341</width>
        <height>231</height>
@@ -886,31 +886,6 @@ color: rgb(0, 0, 0);</string>
        <string>MRF</string>
       </property>
      </item>
-     <item>
-      <property name="text">
-       <string>02</string>
-      </property>
-     </item>
-     <item>
-      <property name="text">
-       <string>03</string>
-      </property>
-     </item>
-     <item>
-      <property name="text">
-       <string>04</string>
-      </property>
-     </item>
-     <item>
-      <property name="text">
-       <string>05</string>
-      </property>
-     </item>
-     <item>
-      <property name="text">
-       <string>06</string>
-      </property>
-     </item>
     </widget>
     <widget class="QLabel" name="label_8">
      <property name="geometry">
@@ -1099,6 +1074,33 @@ color: rgb(0, 0, 0);</string>
       </property>
      </item>
     </widget>
+    <widget class="QLabel" name="label_21">
+     <property name="geometry">
+      <rect>
+       <x>880</x>
+       <y>51</y>
+       <width>421</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Arial</family>
+       <pointsize>10</pointsize>
+       <weight>50</weight>
+       <bold>false</bold>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(170, 0, 127);</string>
+     </property>
+     <property name="text">
+      <string>No Data Found</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+     </property>
+    </widget>
     <zorder>label_20</zorder>
     <zorder>pushButton_3</zorder>
     <zorder>pushButton_4</zorder>
@@ -1129,6 +1131,7 @@ color: rgb(0, 0, 0);</string>
     <zorder>checkBox</zorder>
     <zorder>label_9</zorder>
     <zorder>comboBox_5</zorder>
+    <zorder>label_21</zorder>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
