--- a/URmini/ui/20_Bluetooth_Setup.ui
+++ b/URmini/ui/20_Bluetooth_Setup.ui
@@ -442,6 +442,15 @@
         <height>71</height>
        </rect>
       </property>
+      <property name="frameShape">
+       <enum>QFrame::Box</enum>
+      </property>
+      <property name="frameShadow">
+       <enum>QFrame::Plain</enum>
+      </property>
+      <property name="lineWidth">
+       <number>2</number>
+      </property>
       <item>
        <property name="text">
         <string>New Item</string>
@@ -472,7 +481,7 @@
     <widget class="QRadioButton" name="radioButton">
      <property name="geometry">
       <rect>
-       <x>120</x>
+       <x>30</x>
        <y>170</y>
        <width>82</width>
        <height>31</height>
@@ -488,9 +497,9 @@
     <widget class="QRadioButton" name="radioButton_2">
      <property name="geometry">
       <rect>
-       <x>230</x>
+       <x>150</x>
        <y>170</y>
-       <width>101</width>
+       <width>91</width>
        <height>31</height>
       </rect>
      </property>
@@ -501,9 +510,9 @@
     <widget class="QPushButton" name="pushButton_14">
      <property name="geometry">
       <rect>
-       <x>350</x>
+       <x>390</x>
        <y>170</y>
-       <width>111</width>
+       <width>121</width>
        <height>31</height>
       </rect>
      </property>
@@ -521,6 +530,40 @@
      </property>
      <property name="text">
       <string>Check Load Cell</string>
+     </property>
+     <property name="autoDefault">
+      <bool>true</bool>
+     </property>
+     <property name="default">
+      <bool>true</bool>
+     </property>
+     <property name="flat">
+      <bool>false</bool>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton_15">
+     <property name="geometry">
+      <rect>
+       <x>270</x>
+       <y>170</y>
+       <width>71</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Arial</family>
+       <pointsize>8</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(255, 170, 127);
+</string>
+     </property>
+     <property name="text">
+      <string>SAVE</string>
      </property>
      <property name="autoDefault">
       <bool>true</bool>
