--- a/TYR_2.0_18.5/ui/email_multiple_files.ui
+++ b/TYR_2.0_18.5/ui/email_multiple_files.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>668</width>
+    <width>824</width>
     <height>423</height>
    </rect>
   </property>
@@ -18,9 +18,9 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>0</y>
-      <width>631</width>
-      <height>381</height>
+      <y>10</y>
+      <width>781</width>
+      <height>361</height>
      </rect>
     </property>
     <property name="font">
@@ -89,7 +89,7 @@
     <widget class="QPushButton" name="pushButton_6">
      <property name="geometry">
       <rect>
-       <x>190</x>
+       <x>50</x>
        <y>310</y>
        <width>111</width>
        <height>31</height>
@@ -123,7 +123,7 @@
     <widget class="QPushButton" name="pushButton_7">
      <property name="geometry">
       <rect>
-       <x>330</x>
+       <x>210</x>
        <y>310</y>
        <width>111</width>
        <height>31</height>
@@ -180,7 +180,7 @@
       <rect>
        <x>190</x>
        <y>110</y>
-       <width>361</width>
+       <width>351</width>
        <height>31</height>
       </rect>
      </property>
@@ -205,9 +205,9 @@
     <widget class="Line" name="line">
      <property name="geometry">
       <rect>
-       <x>190</x>
-       <y>260</y>
-       <width>371</width>
+       <x>50</x>
+       <y>270</y>
+       <width>491</width>
        <height>21</height>
       </rect>
      </property>
@@ -224,9 +224,9 @@
     <widget class="QPushButton" name="pushButton_8">
      <property name="geometry">
       <rect>
-       <x>470</x>
+       <x>370</x>
        <y>310</y>
-       <width>101</width>
+       <width>111</width>
        <height>31</height>
       </rect>
      </property>
@@ -308,7 +308,7 @@
       <rect>
        <x>190</x>
        <y>170</y>
-       <width>361</width>
+       <width>351</width>
        <height>31</height>
       </rect>
      </property>
@@ -330,6 +330,26 @@
       <enum>QLineEdit::Normal</enum>
      </property>
     </widget>
+    <widget class="QListWidget" name="listWidget">
+     <property name="geometry">
+      <rect>
+       <x>560</x>
+       <y>110</y>
+       <width>191</width>
+       <height>221</height>
+      </rect>
+     </property>
+     <item>
+      <property name="text">
+       <string>Report0001.pdf</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Report0002.pdf</string>
+      </property>
+     </item>
+    </widget>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -337,7 +357,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>668</width>
+     <width>824</width>
      <height>21</height>
     </rect>
    </property>
