--- a/TYR_2.0_18.5/ui/TY_11_START_TEST_COF.ui
+++ b/TYR_2.0_18.5/ui/TY_11_START_TEST_COF.ui
@@ -80,10 +80,10 @@
     <widget class="QPushButton" name="pushButton_3">
      <property name="geometry">
       <rect>
-       <x>660</x>
-       <y>510</y>
-       <width>71</width>
-       <height>31</height>
+       <x>650</x>
+       <y>500</y>
+       <width>81</width>
+       <height>51</height>
       </rect>
      </property>
      <property name="font">
@@ -105,10 +105,10 @@ background-color: rgb(170, 0, 0);</string>
     <widget class="QPushButton" name="pushButton_4">
      <property name="geometry">
       <rect>
-       <x>660</x>
-       <y>450</y>
-       <width>71</width>
-       <height>31</height>
+       <x>650</x>
+       <y>430</y>
+       <width>81</width>
+       <height>51</height>
       </rect>
      </property>
      <property name="font">
@@ -130,10 +130,10 @@ background-color: rgb(0, 180, 0);</string>
     <widget class="QPushButton" name="pushButton_13">
      <property name="geometry">
       <rect>
-       <x>660</x>
+       <x>650</x>
        <y>570</y>
-       <width>71</width>
-       <height>31</height>
+       <width>81</width>
+       <height>51</height>
       </rect>
      </property>
      <property name="font">
@@ -174,10 +174,10 @@ color: rgb(255, 255, 255);</string>
     <widget class="QPushButton" name="pushButton_14">
      <property name="geometry">
       <rect>
-       <x>660</x>
+       <x>650</x>
        <y>640</y>
        <width>81</width>
-       <height>31</height>
+       <height>41</height>
       </rect>
      </property>
      <property name="font">
@@ -199,9 +199,9 @@ color: rgb(255, 255, 255);</string>
     <widget class="QLabel" name="label_21">
      <property name="geometry">
       <rect>
-       <x>60</x>
+       <x>30</x>
        <y>200</y>
-       <width>651</width>
+       <width>681</width>
        <height>31</height>
       </rect>
      </property>
@@ -428,16 +428,6 @@ color: rgb(255, 255, 255);</string>
        <weight>75</weight>
        <bold>true</bold>
       </font>
-     </property>
-    </widget>
-    <widget class="QGraphicsView" name="graphicsView">
-     <property name="geometry">
-      <rect>
-       <x>30</x>
-       <y>260</y>
-       <width>601</width>
-       <height>431</height>
-      </rect>
      </property>
     </widget>
     <widget class="QTableWidget" name="tableWidget">
@@ -797,10 +787,10 @@ color: rgb(255, 255, 255);</string>
     <widget class="QLCDNumber" name="lcdNumber">
      <property name="geometry">
       <rect>
-       <x>660</x>
-       <y>310</y>
-       <width>64</width>
-       <height>23</height>
+       <x>653</x>
+       <y>302</y>
+       <width>71</width>
+       <height>31</height>
       </rect>
      </property>
      <property name="styleSheet">
@@ -821,10 +811,10 @@ color: rgb(255, 0, 0);</string>
     <widget class="QLCDNumber" name="lcdNumber_2">
      <property name="geometry">
       <rect>
-       <x>660</x>
-       <y>390</y>
-       <width>64</width>
-       <height>23</height>
+       <x>653</x>
+       <y>382</y>
+       <width>71</width>
+       <height>31</height>
       </rect>
      </property>
      <property name="styleSheet">
@@ -867,7 +857,7 @@ color: rgb(255, 0, 0);</string>
      <property name="geometry">
       <rect>
        <x>660</x>
-       <y>350</y>
+       <y>340</y>
        <width>91</width>
        <height>31</height>
       </rect>
@@ -889,6 +879,42 @@ color: rgb(255, 0, 0);</string>
      <property name="alignment">
       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
      </property>
+    </widget>
+    <widget class="QWidget" name="">
+     <property name="geometry">
+      <rect>
+       <x>30</x>
+       <y>250</y>
+       <width>611</width>
+       <height>441</height>
+      </rect>
+     </property>
+     <layout class="QGridLayout" name="gridLayout">
+      <item row="0" column="0">
+       <widget class="QLabel" name="label_22">
+        <property name="font">
+         <font>
+          <family>Arial</family>
+          <pointsize>10</pointsize>
+          <weight>50</weight>
+          <bold>false</bold>
+         </font>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">color: rgb(170, 0, 127);</string>
+        </property>
+        <property name="text">
+         <string>Running......</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QGraphicsView" name="graphicsView"/>
+      </item>
+     </layout>
     </widget>
    </widget>
   </widget>
